--- a/package.json
+++ b/package.json
@@ -6,24 +6,23 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
+    "dev:proxy1": "cross-env METHOD=proxy1 npm-run-all --parallel dev proxy1",
+    "dev:proxy2": "cross-env METHOD=proxy2 npm-run-all --parallel dev proxy2",
+    "dev:nginx": "cross-env METHOD=nginx npm run dev",
+    "start": "npm run dev:proxy1",
     "build": "rimraf dist && node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "proxy1": "node douban/app.js",
+    "proxy2": " node douban/proxy.js",
+    "filemap": "filemap -i node_modules build config dist .git"
   },
   "dependencies": {
+    "flyio": "^0.5.7",
     "mpvue": "^1.0.10",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
-    "mpvue-loader": "^1.0.13",
-    "mpvue-webpack-target": "^1.0.0",
-    "mpvue-template-compiler": "^1.0.10",
-    "portfinder": "^1.0.13",
-    "postcss-mpvue-wxss": "^1.0.0",
-    "px2rpx-loader": "^0.1.8",
     "babel-core": "^6.22.1",
-    "glob": "^7.1.2",
-    "webpack-mpvue-asset-plugin": "^0.0.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
@@ -31,37 +30,55 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
+    "co-request": "^1.0.0",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.1.4",
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
     "eslint-friendly-formatter": "^3.0.0",
+    "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^3.0.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
+    "filemap.js": "^0.0.3",
     "friendly-errors-webpack-plugin": "^1.1.3",
+    "glob": "^7.1.2",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.2.1",
+    "koa": "^2.5.1",
+    "koa-router": "^7.4.0",
+    "koa2-connect": "^1.0.2",
+    "mpvue-loader": "^1.0.13",
+    "mpvue-template-compiler": "^1.0.10",
+    "mpvue-webpack-target": "^1.0.0",
+    "node-sass": "^4.9.0",
+    "npm-run-all": "^4.1.2",
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
+    "ora": "^1.2.0",
+    "portfinder": "^1.0.13",
+    "postcss-loader": "^2.0.6",
+    "postcss-mpvue-wxss": "^1.0.0",
+    "px2rpx-loader": "^0.1.8",
+    "rimraf": "^2.6.0",
+    "sass-bem": "^2.6.5",
+    "sass-loader": "^7.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.2.4",
-    "optimize-css-assets-webpack-plugin": "^2.0.0",
-    "ora": "^1.2.0",
-    "rimraf": "^2.6.0",
     "url-loader": "^0.5.8",
     "vue-style-loader": "^3.0.1",
     "webpack": "^2.6.1",
+    "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware-hard-disk": "^1.10.1",
     "webpack-merge": "^4.1.0",
-    "postcss-loader": "^2.0.6"
+    "webpack-mpvue-asset-plugin": "^0.0.1"
   },
   "engines": {
     "node": ">= 4.0.0",
